2001-01-27  Michael Hayes  <mhayes@redhat.com>

	* loop.c (loop_giv_reduce_benefit): Copy mode size into
	int variable.
	(check_ext_dependant_givs): Initialise u_start_val and
	u_end_val.
	(load_mems): Make last_max_reg unsigned.
	(try_swap_copy_prop): Use INSN_P and initialise set.

Fri Jan 26 23:22:58 2001  Denis Chertykov  <denisc@overta.ru>

	* README.AVR : Removed.

Fri Jan 26 11:37:26 2001  Jeffrey A Law  (law@cygnus.com)

	* pa-64.h (text_section): Remove declaration.

	* pa.md (return_internal): Remove mode on PIC register use.

2001-01-25  lars brinkhoff  <lars@nocrew.org>

	* tm.texi (DATA_ALIGNMENT, LOCAL_ALIGNMENT, ASM_OPEN_PAREN,
	ASM_CLOSE_PAREN): fix typos.

2001-01-25  Mark Mitchell  <mark@codesourcery.com>

	* acconfig.h: Define `const' to the empty string if neither
	__STDC__ nor __cplusplus is defined.
	* config.in: Regenerated.

2001-01-25  David Edelsohn  <edelsohn@gnu.org>

	* config.gcc (rs6000-ibm-aix[5-9]*): Change to aix51.h.
	* collect2.c (main): Delete importf.  Add ".obj" file extension.
	(GCC_CHECK_HDR): Handle AIX V5 new magic number.
	(aix_std_libs): Add additional AIX libraries to skip.
	* config/rs6000/aix.h (MY_ISCOFF): Add AIX V5 new magic number.
	* config/rs6000/aix51.h: New file.

2001-01-25  Michael Hayes  <mhayes@redhat.com>

	* loop.c (loop_call_insn_emit_before, loop_call_insn_hoist): New.
	(loop_insn_emit_before): No longer static.
	(move_movables): Replace emit_insn_after with loop_insn_emit_after.
	(loop_givs_rescan, load_mems): Likewise.
	(check_dbra_loop): Replace emit_insn_before with loop_insn_emit_before.
	(maybe_eliminate_biv_1):
	(move_movables): Replace emit_call_insn_before with
	loop_call_insn_hoist.
	* loop.h (loop_insn_emit_before): Add.
	* unroll.c (copy_loop_body): Replace emit_insn_before with 
	loop_insn_emit_before.

2001-01-25  Neil Booth  <neil@daikokuya.demon.co.uk>

        * diagnostic.c (fatal): Request preprocessed source.

Thu Jan 25 02:01:16 2001  J"orn Rennecke <amylaar@redhat.com>
