@@ -1,3 +1,8 @@
+2001-01-26  Richard Henderson  <rth@redhat.com>
+
+	* alias.c (objects_must_conflict_p): Read-only slots may not
+	conflict despite having the same type.
+
 2001-01-27  Michael Hayes  <mhayes@redhat.com>
 
 	* loop.c (loop_giv_reduce_benefit): Copy mode size into
